--- a/application.yml
+++ b/application.yml
@@ -1,9 +1,20 @@
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
+spring:
+  datasource:
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+  eureka:
+    instance:
+      prefer-ip-address: true
+    client:
+      fetch-registry: true
+      register-with-eureka: true
+  
+      service-url:
+        defaultZone: http://localhost:8761/eureka
